java/java-tests/testData/codeInsight/daemonCodeAnalyzer/implicitClass/HighlightInsufficientLevel.java
void <error descr="Implicitly declared classes are not supported at language level '20'">foo</error>() {

}

String <error descr="Implicitly declared classes are not supported at language level '20'">s</error> = "asd";

<error descr="Implicitly declared classes are not supported at language level '20'">static {

}</error>

class A {

}